--- a/index.html
+++ b/index.html
@@ -1,160 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenSense - Eco-Friendly Sensing Solutions</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="https://via.placeholder.com/32x32/4CAF50/FFFFFF?text=GS" type="image/x-icon">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>GreenSense — Smart Insights for Small Greenhouse Farmers</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="https://via.placeholder.com/32x32/4CAF50/FFFFFF?text=GS" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">GreenSense</div>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#visuals">Visuals</a></li>
-                <li><a href="#details">Details</a></li>
-                <li><a href="#cta">Get Started</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header class="site-header">
+    <nav class="nav">
+      <div class="brand">GreenSense</div>
+      <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Open menu">☰</button>
+      <ul id="primary-nav" class="nav-list">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#features">Features</a></li>
+        <li><a href="#visuals">Visuals</a></li>
+        <li><a href="#details">How it Works</a></li>
+        <li><a href="#cta">Get Started</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <!-- Hero Section -->
+  <main>
+    <!-- HERO -->
     <section id="home" class="hero">
-        <div class="hero-content">
-            <h1>Sensing the Future, Sustainably</h1>
-            <p>Advanced green sensing technology for a healthier planet. Monitor, analyze, and act with precision.</p>
-            <a href="#features" class="cta-button" aria-label="Explore Features">Explore Features</a>
+      <div class="hero-panel">
+        <h1>Sensing the future — sustainably.</h1>
+        <p class="lead">GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.</p>
+        <div class="hero-actions">
+          <a class="btn primary" href="#features">Explore Features</a>
+          <a class="btn ghost" href="#cta">Get Started</a>
         </div>
-        <div class="hero-image">
-            <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Green landscape with eco-friendly sensors" />
-        </div>
+      </div>
+
+      <figure class="hero-art">
+        <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=1200&q=80" alt="Greenhouse with sensors">
+      </figure>
     </section>
 
-    <!-- Features/Highlights Section -->
-    <section id="features" class="section features-section">
-        <div class="container">
-            <h2>Key Features</h2>
-            <div class="features-grid">
-                <div class="feature-card">
-                    <div class="icon">🌿</div>
-                    <h3>Eco-Friendly Design</h3>
-                    <p>Built with sustainable materials and minimal environmental impact.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="icon">📊</div>
-                    <h3>Data-Driven Insights</h3>
-                    <p>Accurate real-time analytics for informed decision-making.</p>
-                </div>
-                <div class="feature-card">
-                    <div class="icon">🔧</div>
-                    <h3>Easy Integration</h3>
-                    <p>Seamlessly connects to IoT systems and apps.</p>
-                </div>
-            </div>
+    <!-- FEATURES -->
+    <section id="features" class="section features">
+      <div class="container">
+        <h2>Key Features</h2>
+        <div class="features-grid">
+          <article class="feature">
+            <div class="feature-icon">🌿</div>
+            <h3>Designed for small farms</h3>
+            <p>Simple, affordable and built for small greenhouse operators.</p>
+          </article>
+
+          <article class="feature">
+            <div class="feature-icon">📊</div>
+            <h3>Data-driven insights</h3>
+            <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
+          </article>
+
+          <article class="feature">
+            <div class="feature-icon">🔔</div>
+            <h3>Alerts & suggestions</h3>
+            <p>Instant notifications when costs spike or profits rise.</p>
+          </article>
         </div>
+      </div>
     </section>
 
-    <!-- Visual Element Section -->
-    <section id="visuals" class="section visuals-section">
-        <div class="container">
-            <h2>Product Showcase</h2>
-            <div class="visuals-grid">
-                <div class="visual-item">
-                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="AirSense Monitor product mock-up" />
-                    <p>AirSense Monitor: Real-time air quality tracking.</p>
-                </div>
-                <div class="visual-item">
-                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="SoilGuard Sensor illustration" />
-                    <p>SoilGuard Sensor: Optimize farming with nutrient data.</p>
-                </div>
-                <div class="visual-item">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="EnergyFlow Tracker mock-up" />
-                    <p>EnergyFlow Tracker: Monitor energy efficiency.</p>
-                </div>
-            </div>
+    <!-- VISUALS -->
+    <section id="visuals" class="section visuals">
+      <div class="container">
+        <h2>Product Showcase</h2>
+        <div class="visuals-grid">
+          <figure class="visual">
+            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?auto=format&fit=crop&w=800&q=80" alt="AirSense Monitor">
+            <figcaption>AirSense Monitor — real-time air quality tracking.</figcaption>
+          </figure>
+
+          <figure class="visual">
+            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=800&q=80" alt="SoilGuard Sensor">
+            <figcaption>SoilGuard Sensor — nutrient & moisture insights.</figcaption>
+          </figure>
+
+          <figure class="visual">
+            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80" alt="EnergyFlow Tracker">
+            <figcaption>EnergyFlow Tracker — monitor and reduce energy costs.</figcaption>
+          </figure>
         </div>
+      </div>
     </section>
 
-    <!-- Information/Details Section -->
-    <section id="details" class="section details-section">
-        <div class="container">
-            <h2>How It Works</h2>
-            <div class="process-steps">
-                <div class="step">
-                    <span class="step-number">1</span>
-                    <h3>Install Sensors</h3>
-                    <p>Place our devices in your environment for seamless monitoring.</p>
-                </div>
-                <div class="step">
-                    <span class="step-number">2</span>
-                    <h3>Collect Data</h3>
-                    <p>Real-time data on air, soil, and energy is gathered automatically.</p>
-                </div>
-                <div class="step">
-                    <span class="step-number">3</span>
-                    <h3>Analyze & Act</h3>
-                    <p>Use insights to make sustainable choices and reduce your footprint.</p>
-                </div>
-            </div>
-            <div class="benefits">
-                <h3>Benefits</h3>
-                <ul>
-                    <li>Reduce energy costs by up to 30%.</li>
-                    <li>Improve air quality and health outcomes.</li>
-                    <li>Support global sustainability goals.</li>
-                </ul>
-            </div>
+    <!-- DETAILS -->
+    <section id="details" class="section details">
+      <div class="container two-column">
+        <div class="col">
+          <h2>How GreenSense works</h2>
+          <ol class="process">
+            <li><strong>Log transactions</strong> — purchases & sales.</li>
+            <li><strong>AI analysis</strong> — profit, cost, trend insights.</li>
+            <li><strong>Alerts & reports</strong> — suggestions & charts.</li>
+          </ol>
+
+          <h3>Benefits</h3>
+          <ul class="benefits">
+            <li>Reduce input costs by up to 30%.</li>
+            <li>Plan smarter using data trends.</li>
+            <li>Less waste — harvest what sells.</li>
+          </ul>
         </div>
+
+        <aside class="col aside-card">
+          <h3>Quick Stats</h3>
+          <dl>
+            <dt>Avg. savings</dt>
+            <dd>~25%</dd>
+            <dt>Time to insights</dt>
+            <dd>Weeks</dd>
+            <dt>Best for</dt>
+            <dd>Small greenhouses</dd>
+          </dl>
+          <a class="btn outline" href="#cta">Start Free Trial</a>
+        </aside>
+      </div>
     </section>
 
-    <!-- Testimonials (New Feature) -->
-    <section class="section testimonials-section">
-        <div class="container">
-            <h2>What Our Users Say</h2>
-            <div class="testimonials-grid">
-                <blockquote>
-                    <p>"GreenSense transformed our farm's efficiency!"</p>
-                    <cite>- Farmer John, USA</cite>
-                </blockquote>
-                <blockquote>
-                    <p>"Accurate data for a greener future."</p>
-                    <cite>- EcoTech Corp</cite>
-                </blockquote>
-            </div>
+    <!-- TESTIMONIALS -->
+    <section class="section testimonials">
+      <div class="container">
+        <h2>What our users say</h2>
+        <div class="testimonials-grid">
+          <blockquote>
+            "GreenSense transformed our farm's efficiency — we reduced waste and increased profit."
+            <cite>- Farmer John</cite>
+          </blockquote>
+
+          <blockquote>
+            "A tool finally built for small growers. The alerts and charts are game-changing."
+            <cite>- EcoTech Cooperative</cite>
+          </blockquote>
         </div>
+      </div>
     </section>
 
-    <!-- Call-to-Action (CTA) Section -->
-    <section id="cta" class="section cta-section">
-        <div class="container">
-            <h2>Ready to Make a Difference?</h2>
-            <p>Join thousands of users building a sustainable world.</p>
-            <form class="newsletter-form">
-                <input type="email" placeholder="Enter your email" required aria-label="Email for newsletter">
-                <button type="submit" class="cta-button">Sign Up Now</button>
-            </form>
-            <a href="#contact" class="cta-button secondary">Learn More</a>
+    <!-- CTA -->
+    <section id="cta" class="section cta">
+      <div class="container cta-grid">
+        <div>
+          <h2>Ready to make a difference?</h2>
+          <p class="lead">Join small growers using data to grow smarter.</p>
         </div>
+
+        <form class="newsletter" onsubmit="return handleSignup(event)">
+          <input type="email" id="email" placeholder="Enter your email" required>
+          <button class="btn primary" type="submit">Sign Up</button>
+        </form>
+      </div>
     </section>
+  </main>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-content">
-            <p>&copy; 2023 GreenSense. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#home">Home</a> | <a href="#features">Features</a> | <a href="#contact">Contact</a>
-            </div>
-            <div class="social-icons">
-                <a href="#" aria-label="Facebook"><img src="https://via.placeholder.com/24x24/4CAF50/FFFFFF?text=F" alt="Facebook icon"></a>
-                <a href="#" aria-label="Twitter"><img src="https://via.placeholder.com/24x24/4CAF50/FFFFFF?text=T" alt="Twitter icon"></a>
-                <a href="#" aria-label="LinkedIn"><img src="https://via.placeholder.com/24x24/4CAF50/FFFFFF?text=L" alt="LinkedIn icon"></a>
-            </div>
-        </div>
-    </footer>
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <div>
+        <p class="brand-small">GreenSense</p>
+        <p class="muted">Smart insights for small greenhouse farmers</p>
+      </div>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#features">Features</a>
+        <a href="#cta">Contact</a>
+      </nav>
+      <div class="social">
+        <a href="#">F</a>
+        <a href="#">T</a>
+        <a href="#">L</a>
+      </div>
+    </div>
+    <p class="copyright">© 2025 GreenSense. All rights reserved.</p>
+  </footer>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
