Refactor features section to use slide format
Updated feature section to use a slide format for better presentation.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           <a class="btn ghost" href="#cta">Get Started</a>
         </div>
       </div>
-
       <figure class="hero-art">
         <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=1200&q=80" alt="Greenhouse with sensors">
       </figure>
@@ -43,20 +42,18 @@
     <section id="features" class="section features">
       <div class="container">
         <h2>Key Features</h2>
-        <div class="features-grid">
-          <article class="feature">
+        <div class="features-slide-container">
+          <article class="feature-slide">
             <div class="feature-icon">🌿</div>
             <h3>Designed for small farms</h3>
             <p>Simple, affordable and built for small greenhouse operators.</p>
           </article>
-
-          <article class="feature">
+          <article class="feature-slide">
             <div class="feature-icon">📊</div>
             <h3>Data-driven insights</h3>
             <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
           </article>
-
-          <article class="feature">
+          <article class="feature-slide">
             <div class="feature-icon">🔔</div>
             <h3>Alerts & suggestions</h3>
             <p>Instant notifications when costs spike or profits rise.</p>
@@ -74,12 +71,10 @@
             <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?auto=format&fit=crop&w=800&q=80" alt="AirSense Monitor">
             <figcaption>AirSense Monitor — real-time air quality tracking.</figcaption>
           </figure>
-
           <figure class="visual">
             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=800&q=80" alt="SoilGuard Sensor">
             <figcaption>SoilGuard Sensor — nutrient & moisture insights.</figcaption>
           </figure>
-
           <figure class="visual">
             <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80" alt="EnergyFlow Tracker">
             <figcaption>EnergyFlow Tracker — monitor and reduce energy costs.</figcaption>
@@ -98,7 +93,6 @@
             <li><strong>AI analysis</strong> — profit, cost, trend insights.</li>
             <li><strong>Alerts & reports</strong> — suggestions & charts.</li>
           </ol>
-
           <h3>Benefits</h3>
           <ul class="benefits">
             <li>Reduce input costs by up to 30%.</li>
@@ -106,7 +100,6 @@
             <li>Less waste — harvest what sells.</li>
           </ul>
         </div>
-
         <aside class="col aside-card">
           <h3>Quick Stats</h3>
           <dl>
@@ -131,7 +124,6 @@
             "GreenSense transformed our farm's efficiency — we reduced waste and increased profit."
             <cite>- Farmer John</cite>
           </blockquote>
-
           <blockquote>
             "A tool finally built for small growers. The alerts and charts are game-changing."
             <cite>- EcoTech Cooperative</cite>
@@ -147,7 +139,6 @@
           <h2>Ready to make a difference?</h2>
           <p class="lead">Join small growers using data to grow smarter.</p>
         </div>
-
         <form class="newsletter" onsubmit="return handleSignup(event)">
           <input type="email" id="email" placeholder="Enter your email" required>
           <button class="btn primary" type="submit">Sign Up</button>
