--- a/index.html
+++ b/index.html
@@ -39,28 +39,32 @@
     </section>
 
     <!-- FEATURES -->
-    <section id="features" class="section features">
-      <div class="container">
-        <h2>Key Features</h2>
-        <div class="features-slide-container">
-          <article class="feature-slide">
-            <div class="feature-icon">🌿</div>
-            <h3>Designed for small farms</h3>
-            <p>Simple, affordable and built for small greenhouse operators.</p>
-          </article>
-          <article class="feature-slide">
-            <div class="feature-icon">📊</div>
-            <h3>Data-driven insights</h3>
-            <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
-          </article>
-          <article class="feature-slide">
-            <div class="feature-icon">🔔</div>
-            <h3>Alerts & suggestions</h3>
-            <p>Instant notifications when costs spike or profits rise.</p>
-          </article>
-        </div>
+<section id="features" class="section features">
+  <div class="container">
+    <h2>Key Features</h2>
+    <div class="features-slider-wrapper">
+      <button class="slider-btn prev" aria-label="Previous slide">‹</button>
+      <div class="features-slide-container">
+        <article class="feature-slide">
+          <div class="feature-icon">🌿</div>
+          <h3>Designed for small farms</h3>
+          <p>Simple, affordable and built for small greenhouse operators.</p>
+        </article>
+        <article class="feature-slide">
+          <div class="feature-icon">📊</div>
+          <h3>Data-driven insights</h3>
+          <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
+        </article>
+        <article class="feature-slide">
+          <div class="feature-icon">🔔</div>
+          <h3>Alerts & suggestions</h3>
+          <p>Instant notifications when costs spike or profits rise.</p>
+        </article>
       </div>
-    </section>
+      <button class="slider-btn next" aria-label="Next slide">›</button>
+    </div>
+  </div>
+</section>
 
     <!-- VISUALS -->
     <section id="visuals" class="section visuals">
