--- a/index.html
+++ b/index.html
@@ -39,32 +39,37 @@
     </section>
 
     <!-- FEATURES -->
-<section id="features" class="section features">
-  <div class="container">
-    <h2>Key Features</h2>
-    <div class="features-slider-wrapper">
-      <button class="slider-btn prev" aria-label="Previous slide">‹</button>
-      <div class="features-slide-container">
-        <article class="feature-slide">
-          <div class="feature-icon">🌿</div>
-          <h3>Designed for small farms</h3>
-          <p>Simple, affordable and built for small greenhouse operators.</p>
-        </article>
-        <article class="feature-slide">
-          <div class="feature-icon">📊</div>
-          <h3>Data-driven insights</h3>
-          <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
-        </article>
-        <article class="feature-slide">
-          <div class="feature-icon">🔔</div>
-          <h3>Alerts & suggestions</h3>
-          <p>Instant notifications when costs spike or profits rise.</p>
-        </article>
+    <section id="features" class="section features">
+      <div class="container">
+        <h2>Key Features</h2>
+        <div class="features-slider-wrapper">
+          <button class="slider-btn prev" aria-label="Previous slide">‹</button>
+          <div class="features-slide-container">
+            <article class="feature-slide">
+              <div class="feature-icon">🌿</div>
+              <h3>Designed for small farms</h3>
+              <p>Simple, affordable and built for small greenhouse operators.</p>
+            </article>
+            <article class="feature-slide">
+              <div class="feature-icon">📊</div>
+              <h3>Data-driven insights</h3>
+              <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
+            </article>
+            <article class="feature-slide">
+              <div class="feature-icon">🔔</div>
+              <h3>Alerts & suggestions</h3>
+              <p>Instant notifications when costs spike or profits rise.</p>
+            </article>
+          </div>
+          <button class="slider-btn next" aria-label="Next slide">›</button>
+        </div>
+        <div class="slider-dots">
+          <span class="dot active"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
       </div>
-      <button class="slider-btn next" aria-label="Next slide">›</button>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- VISUALS -->
     <section id="visuals" class="section visuals">
