Remove onsubmit handler from newsletter form
Removed the onsubmit handler from the newsletter form.

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <h2>Ready to make a difference?</h2>
           <p class="lead">Join small growers using data to grow smarter.</p>
         </div>
-        <form class="newsletter" onsubmit="return handleSignup(event)">
+        <form class="newsletter">
           <input type="email" id="email" placeholder="Enter your email" required>
           <button class="btn primary" type="submit">Sign Up</button>
         </form>
