Fix HTML structure and update DOCTYPE declaration

--- a/index.html
+++ b/index.html
@@ -1,182 +1,91 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GreenSense — Smart Insights for Small Greenhouse Farmers</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="https://via.placeholder.com/32x32/4CAF50/FFFFFF?text=GS" type="image/x-icon">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>GreenSense — Smart Insights for Small Greenhouse Farmers</title>
+<link rel="stylesheet" href="styles.css">
+<link rel="icon" href="https://via.placeholder.com/32x32/4CAF50/FFFFFF?text=GS" type="image/x-icon">
 </head>
 <body>
-  <header class="site-header">
-    <nav class="nav">
-      <div class="brand">GreenSense</div>
-      <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Open menu">☰</button>
-      <ul id="primary-nav" class="nav-list">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#visuals">Visuals</a></li>
-        <li><a href="#details">How it Works</a></li>
-        <li><a href="#cta">Get Started</a></li>
-      </ul>
-    </nav>
-  </header>
+<header class="site-header">
+<nav class="nav">
+  <div class="brand">GreenSense</div>
+  <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Open menu">☰</button>
+  <ul id="primary-nav" class="nav-list">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#features">Features</a></li>
+    <li><a href="#visuals">Visuals</a></li>
+    <li><a href="#details">How it Works</a></li>
+    <li><a href="#cta">Get Started</a></li>
+  </ul>
+</nav>
+</header>
 
-  <main>
-    <!-- HERO -->
-    <section id="home" class="hero">
-      <div class="hero-panel">
-        <h1>Sensing the future — sustainably.</h1>
-        <p class="lead">GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.</p>
-        <div class="hero-actions">
-          <a class="btn primary" href="#features">Explore Features</a>
-          <a class="btn ghost" href="#cta">Get Started</a>
-        </div>
-      </div>
-      <figure class="hero-art">
-        <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=1200&q=80" alt="Greenhouse with sensors">
-      </figure>
-    </section>
+<main>
+<!-- HERO -->
+<section id="home" class="hero">
+<div class="hero-panel">
+  <h1>Sensing the future — sustainably.</h1>
+  <p class="lead">GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.</p>
+  <div class="hero-actions">
+    <a class="btn primary" href="#features">Explore Features</a>
+    <a class="btn ghost" href="#cta">Get Started</a>
+  </div>
+</div>
+<figure class="hero-art">
+  <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=1200&q=80" alt="Greenhouse with sensors">
+</figure>
+</section>
 
-    <!-- FEATURES -->
-    <section id="features" class="section features">
-      <div class="container">
-        <h2>Key Features</h2>
-        <div class="features-slider-wrapper">
-          <button class="slider-btn prev" aria-label="Previous slide">‹</button>
-          <div class="features-slide-container">
-            <article class="feature-slide">
-              <div class="feature-icon">🌿</div>
-              <h3>Designed for small farms</h3>
-              <p>Simple, affordable and built for small greenhouse operators.</p>
-            </article>
-            <article class="feature-slide">
-              <div class="feature-icon">📊</div>
-              <h3>Data-driven insights</h3>
-              <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
-            </article>
-            <article class="feature-slide">
-              <div class="feature-icon">🔔</div>
-              <h3>Alerts & suggestions</h3>
-              <p>Instant notifications when costs spike or profits rise.</p>
-            </article>
-          </div>
-          <button class="slider-btn next" aria-label="Next slide">›</button>
-        </div>
-        <div class="slider-dots">
-          <span class="dot active"></span>
-          <span class="dot"></span>
-          <span class="dot"></span>
-        </div>
-      </div>
-    </section>
+<!-- FEATURES PPT Slider -->
+<section id="features" class="section features">
+<div class="container">
+<h2>Key Features</h2>
+<div class="features-slider-wrapper">
+  <button class="slider-btn prev" aria-label="Previous slide">‹</button>
+  <div class="features-slide-container">
+    <article class="feature-slide">
+      <div class="feature-icon">🌿</div>
+      <h3>Designed for small farms</h3>
+      <p>Simple, affordable and built for small greenhouse operators.</p>
+    </article>
+    <article class="feature-slide">
+      <div class="feature-icon">📊</div>
+      <h3>Data-driven insights</h3>
+      <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
+    </article>
+    <article class="feature-slide">
+      <div class="feature-icon">🔔</div>
+      <h3>Alerts & suggestions</h3>
+      <p>Instant notifications when costs spike or profits rise.</p>
+    </article>
+  </div>
+  <button class="slider-btn next" aria-label="Next slide">›</button>
+</div>
+<div class="slider-dots">
+  <span class="dot active"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+</div>
+</section>
 
-    <!-- VISUALS -->
-    <section id="visuals" class="section visuals">
-      <div class="container">
-        <h2>Product Showcase</h2>
-        <div class="visuals-grid">
-          <figure class="visual">
-            <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?auto=format&fit=crop&w=800&q=80" alt="AirSense Monitor">
-            <figcaption>AirSense Monitor — real-time air quality tracking.</figcaption>
-          </figure>
-          <figure class="visual">
-            <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=800&q=80" alt="SoilGuard Sensor">
-            <figcaption>SoilGuard Sensor — nutrient & moisture insights.</figcaption>
-          </figure>
-          <figure class="visual">
-            <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?auto=format&fit=crop&w=800&q=80" alt="EnergyFlow Tracker">
-            <figcaption>EnergyFlow Tracker — monitor and reduce energy costs.</figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>
+<!-- CTA -->
+<section id="cta" class="section cta">
+<div class="container cta-grid">
+  <div>
+    <h2>Ready to make a difference?</h2>
+    <p class="lead">Join small growers using data to grow smarter.</p>
+  </div>
+  <form class="newsletter">
+    <input type="email" id="email" placeholder="Enter your email" required>
+    <button class="btn primary" type="submit">Sign Up</button>
+  </form>
+</div>
+</section>
 
-    <!-- DETAILS -->
-    <section id="details" class="section details">
-      <div class="container two-column">
-        <div class="col">
-          <h2>How GreenSense works</h2>
-          <ol class="process">
-            <li><strong>Log transactions</strong> — purchases & sales.</li>
-            <li><strong>AI analysis</strong> — profit, cost, trend insights.</li>
-            <li><strong>Alerts & reports</strong> — suggestions & charts.</li>
-          </ol>
-          <h3>Benefits</h3>
-          <ul class="benefits">
-            <li>Reduce input costs by up to 30%.</li>
-            <li>Plan smarter using data trends.</li>
-            <li>Less waste — harvest what sells.</li>
-          </ul>
-        </div>
-        <aside class="col aside-card">
-          <h3>Quick Stats</h3>
-          <dl>
-            <dt>Avg. savings</dt>
-            <dd>~25%</dd>
-            <dt>Time to insights</dt>
-            <dd>Weeks</dd>
-            <dt>Best for</dt>
-            <dd>Small greenhouses</dd>
-          </dl>
-          <a class="btn outline" href="#cta">Start Free Trial</a>
-        </aside>
-      </div>
-    </section>
-
-    <!-- TESTIMONIALS -->
-    <section class="section testimonials">
-      <div class="container">
-        <h2>What our users say</h2>
-        <div class="testimonials-grid">
-          <blockquote>
-            "GreenSense transformed our farm's efficiency — we reduced waste and increased profit."
-            <cite>- Farmer John</cite>
-          </blockquote>
-          <blockquote>
-            "A tool finally built for small growers. The alerts and charts are game-changing."
-            <cite>- EcoTech Cooperative</cite>
-          </blockquote>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA -->
-    <section id="cta" class="section cta">
-      <div class="container cta-grid">
-        <div>
-          <h2>Ready to make a difference?</h2>
-          <p class="lead">Join small growers using data to grow smarter.</p>
-        </div>
-        <form class="newsletter">
-          <input type="email" id="email" placeholder="Enter your email" required>
-          <button class="btn primary" type="submit">Sign Up</button>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <div>
-        <p class="brand-small">GreenSense</p>
-        <p class="muted">Smart insights for small greenhouse farmers</p>
-      </div>
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#features">Features</a>
-        <a href="#cta">Contact</a>
-      </nav>
-      <div class="social">
-        <a href="#">F</a>
-        <a href="#">T</a>
-        <a href="#">L</a>
-      </div>
-    </div>
-    <p class="copyright">© 2025 GreenSense. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
