Add footer section to index.html
Added footer section with brand info, navigation, and social links.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GreenSense — Smart Insights for Small Greenhouse Farmers</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" href="https://via.placeholder.com/32x32/4CAF50/FFFFFF?text=GS" type="image/x-icon">
@@ -84,8 +84,28 @@
   </form>
 </div>
 </section>
-
 </main>
+
+<footer class="site-footer">
+  <div class="container footer-grid">
+    <div>
+      <p class="brand-small">GreenSense</p>
+      <p class="muted">Smart insights for small greenhouse farmers</p>
+    </div>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#features">Features</a>
+      <a href="#cta">Contact</a>
+    </nav>
+    <div class="social">
+      <a href="#">F</a>
+      <a href="#">T</a>
+      <a href="#">L</a>
+    </div>
+  </div>
+  <p class="copyright">© 2025 GreenSense. All rights reserved.</p>
+</footer>
+
 <script src="script.js"></script>
 </body>
 </html>
