--- a/index.html
+++ b/index.html
@@ -38,36 +38,65 @@
 </figure>
 </section>
 
-<!-- FEATURES PPT Slider -->
+<!-- FEATURES PPT Slider + Benefits + Quick Stats -->
 <section id="features" class="section features">
 <div class="container">
-<h2>Key Features</h2>
-<div class="features-slider-wrapper">
-  <button class="slider-btn prev" aria-label="Previous slide">‹</button>
-  <div class="features-slide-container">
-    <article class="feature-slide">
-      <div class="feature-icon">🌿</div>
-      <h3>Designed for small farms</h3>
-      <p>Simple, affordable and built for small greenhouse operators.</p>
-    </article>
-    <article class="feature-slide">
-      <div class="feature-icon">📊</div>
-      <h3>Data-driven insights</h3>
-      <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
-    </article>
-    <article class="feature-slide">
-      <div class="feature-icon">🔔</div>
-      <h3>Alerts & suggestions</h3>
-      <p>Instant notifications when costs spike or profits rise.</p>
-    </article>
+  <h2>Key Features</h2>
+
+  <!-- Feature Slider -->
+  <div class="features-slider-wrapper">
+    <button class="slider-btn prev" aria-label="Previous slide">‹</button>
+    <div class="features-slide-container">
+      <article class="feature-slide">
+        <div class="feature-icon">🌿</div>
+        <h3>Designed for small farms</h3>
+        <p>Simple, affordable and built for small greenhouse operators.</p>
+      </article>
+      <article class="feature-slide">
+        <div class="feature-icon">📊</div>
+        <h3>Data-driven insights</h3>
+        <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
+      </article>
+      <article class="feature-slide">
+        <div class="feature-icon">🔔</div>
+        <h3>Alerts & suggestions</h3>
+        <p>Instant notifications when costs spike or profits rise.</p>
+      </article>
+    </div>
+    <button class="slider-btn next" aria-label="Next slide">›</button>
   </div>
-  <button class="slider-btn next" aria-label="Next slide">›</button>
-</div>
-<div class="slider-dots">
-  <span class="dot active"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
-</div>
+  <div class="slider-dots">
+    <span class="dot active"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
+
+  <!-- Benefits -->
+  <h3>Benefits of Using GreenSense</h3>
+  <div class="benefits-grid">
+    <div class="benefit-card">✔ Save Money – Know which crops give the highest return.</div>
+    <div class="benefit-card">✔ Reduce Waste – Avoid overplanting or unnecessary purchases.</div>
+    <div class="benefit-card">✔ Increase Profits – Make informed crop and market decisions.</div>
+    <div class="benefit-card">✔ Plan Better – Predict demand and optimize planting schedules.</div>
+    <div class="benefit-card">✔ Peace of Mind – GreenSense watches your transactions 24/7.</div>
+  </div>
+
+  <!-- Quick Stats -->
+  <h3>Quick Stats</h3>
+  <div class="stats-grid">
+    <div class="stat-card">
+      <h4>Avg. Savings</h4>
+      <p>~25%</p>
+    </div>
+    <div class="stat-card">
+      <h4>Time to Insights</h4>
+      <p>Weeks</p>
+    </div>
+    <div class="stat-card">
+      <h4>Best For</h4>
+      <p>Small Greenhouses</p>
+    </div>
+  </div>
 </div>
 </section>
 
