--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8"> 
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GreenSense — Smart Insights for Small Greenhouse Farmers</title>
 <link rel="stylesheet" href="styles.css">
@@ -11,19 +11,15 @@
 <header class="site-header">
 <nav class="nav">
   <div class="brand">GreenSense</div>
-  <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Open menu">☰</button>
   <ul id="primary-nav" class="nav-list">
     <li><a href="#home">Home</a></li>
     <li><a href="#features">Features</a></li>
-    <li><a href="#visuals">Visuals</a></li>
-    <li><a href="#details">How it Works</a></li>
     <li><a href="#cta">Get Started</a></li>
   </ul>
 </nav>
 </header>
 
 <main>
-<!-- HERO -->
 <section id="home" class="hero">
 <div class="hero-panel">
   <h1>Sensing the future — sustainably.</h1>
@@ -38,69 +34,40 @@
 </figure>
 </section>
 
-<!-- FEATURES PPT Slider + Benefits + Quick Stats -->
 <section id="features" class="section features">
 <div class="container">
   <h2>Key Features</h2>
-
-  <!-- Feature Slider -->
   <div class="features-slider-wrapper">
-    <button class="slider-btn prev" aria-label="Previous slide">‹</button>
+    <button class="slider-btn prev">‹</button>
     <div class="features-slide-container">
-      <article class="feature-slide">
-        <div class="feature-icon">🌿</div>
-        <h3>Designed for small farms</h3>
-        <p>Simple, affordable and built for small greenhouse operators.</p>
-      </article>
-      <article class="feature-slide">
-        <div class="feature-icon">📊</div>
-        <h3>Data-driven insights</h3>
-        <p>Automatic profit-per-crop, cost tracking, and easy charts.</p>
-      </article>
-      <article class="feature-slide">
-        <div class="feature-icon">🔔</div>
-        <h3>Alerts & suggestions</h3>
-        <p>Instant notifications when costs spike or profits rise.</p>
-      </article>
+      <article class="feature-slide"><div class="feature-icon">🌿</div><h3>Small Farms</h3><p>Simple, affordable and built for small greenhouse operators.</p></article>
+      <article class="feature-slide"><div class="feature-icon">📊</div><h3>Data Insights</h3><p>Profit-per-crop, cost tracking, and easy charts.</p></article>
+      <article class="feature-slide"><div class="feature-icon">🔔</div><h3>Alerts</h3><p>Instant notifications when costs spike or profits rise.</p></article>
     </div>
-    <button class="slider-btn next" aria-label="Next slide">›</button>
+    <button class="slider-btn next">›</button>
   </div>
   <div class="slider-dots">
-    <span class="dot active"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <span class="dot active"></span><span class="dot"></span><span class="dot"></span>
   </div>
 
-  <!-- Benefits -->
   <h3>Benefits of Using GreenSense</h3>
   <div class="benefits-grid">
-    <div class="benefit-card">✔ Save Money – Know which crops give the highest return.</div>
-    <div class="benefit-card">✔ Reduce Waste – Avoid overplanting or unnecessary purchases.</div>
-    <div class="benefit-card">✔ Increase Profits – Make informed crop and market decisions.</div>
-    <div class="benefit-card">✔ Plan Better – Predict demand and optimize planting schedules.</div>
-    <div class="benefit-card">✔ Peace of Mind – GreenSense watches your transactions 24/7.</div>
+    <div class="benefit-card"><span class="benefit-icon">💰</span>Save Money – Know which crops give the highest return.</div>
+    <div class="benefit-card"><span class="benefit-icon">♻️</span>Reduce Waste – Avoid overplanting or unnecessary purchases.</div>
+    <div class="benefit-card"><span class="benefit-icon">📈</span>Increase Profits – Make informed crop and market decisions.</div>
+    <div class="benefit-card"><span class="benefit-icon">🗓️</span>Plan Better – Predict demand and optimize planting schedules.</div>
+    <div class="benefit-card"><span class="benefit-icon">🛡️</span>Peace of Mind – GreenSense watches your transactions 24/7.</div>
   </div>
 
-  <!-- Quick Stats -->
   <h3>Quick Stats</h3>
   <div class="stats-grid">
-    <div class="stat-card">
-      <h4>Avg. Savings</h4>
-      <p>~25%</p>
-    </div>
-    <div class="stat-card">
-      <h4>Time to Insights</h4>
-      <p>Weeks</p>
-    </div>
-    <div class="stat-card">
-      <h4>Best For</h4>
-      <p>Small Greenhouses</p>
-    </div>
+    <div class="stat-card"><span class="stat-icon">💵</span><h4>Avg. Savings</h4><p>~25%</p></div>
+    <div class="stat-card"><span class="stat-icon">⏱️</span><h4>Time to Insights</h4><p>Weeks</p></div>
+    <div class="stat-card"><span class="stat-icon">🏡</span><h4>Best For</h4><p>Small Greenhouses</p></div>
   </div>
 </div>
 </section>
 
-<!-- CTA -->
 <section id="cta" class="section cta">
 <div class="container cta-grid">
   <div>
@@ -116,23 +83,12 @@
 </main>
 
 <footer class="site-footer">
-  <div class="container footer-grid">
-    <div>
-      <p class="brand-small">GreenSense</p>
-      <p class="muted">Smart insights for small greenhouse farmers</p>
-    </div>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#features">Features</a>
-      <a href="#cta">Contact</a>
-    </nav>
-    <div class="social">
-      <a href="#">F</a>
-      <a href="#">T</a>
-      <a href="#">L</a>
-    </div>
+<div class="container footer-grid">
+  <div>
+    <p class="brand-small">GreenSense</p>
+    <p class="muted">Smart insights for small greenhouse farmers</p>
   </div>
-  <p class="copyright">© 2025 GreenSense. All rights reserved.</p>
+</div>
 </footer>
 
 <script src="script.js"></script>
