--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 <section id="home" class="hero">
 <div class="hero-panel">
   <h1>Sensing the future — sustainably.</h1>
-  <p class="lead">GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.</p>
+  <p class="lead">GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.
+  GreenSense is a smart platform designed to help small greenhouse farmers 
+turn everyday transactions into valuable insights. Every time a farmer buys 
+seeds, fertilizers, or soil, or sells crops to a local market, restaurant, or 
+subscription box, GreenSense collects and analyzes the information.</p>
   <div class="hero-actions">
     <a class="btn primary" href="#features">Explore Features</a>
     <a class="btn ghost" href="#cta">Get Started</a>
