Refactor hero section content for clarity and structure

--- a/index.html
+++ b/index.html
@@ -20,24 +20,23 @@
 </header>
 
 <main>
+<!-- HERO -->
 <section id="home" class="hero">
-<div class="hero-panel">
-  <h1>Sensing the future — sustainably.</h1>
-  <p class="lead">GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.
-  GreenSense is a smart platform designed to help small greenhouse farmers 
-turn everyday transactions into valuable insights. Every time a farmer buys 
-seeds, fertilizers, or soil, or sells crops to a local market, restaurant, or 
-subscription box, GreenSense collects and analyzes the information.</p>
-  <div class="hero-actions">
-    <a class="btn primary" href="#features">Explore Features</a>
-    <a class="btn ghost" href="#cta">Get Started</a>
+  <div class="hero-panel">
+    <h1>Sensing the future — sustainably.</h1>
+    <p class="lead">
+      GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.
+      GreenSense is a smart platform designed to help small greenhouse farmers turn everyday transactions into valuable insights. 
+      Every time a farmer buys seeds, fertilizers, or soil, or sells crops to a local market, restaurant, or subscription box, GreenSense collects and analyzes the information.
+    </p>
+    <div class="hero-actions">
+      <a class="btn primary" href="#features">Explore Features</a>
+      <a class="btn ghost" href="#cta">Get Started</a>
+    </div>
   </div>
-</div>
-<figure class="hero-art">
-  <img src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?auto=format&fit=crop&w=1200&q=80" alt="Greenhouse with sensors">
-</figure>
 </section>
 
+<!-- FEATURES -->
 <section id="features" class="section features">
 <div class="container">
   <h2>Key Features</h2>
@@ -72,6 +71,7 @@ subscription box, GreenSense collects and analyzes the information.</p>
 </div>
 </section>
 
+<!-- CTA -->
 <section id="cta" class="section cta">
 <div class="container cta-grid">
   <div>
