Refine hero section text in index.html
Removed redundant sentence from the hero section.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en"> 
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
 <link rel="icon" href="https://via.placeholder.com/32x32/4CAF50/FFFFFF?text=GS" type="image/x-icon">
 </head>
 <body>
+
 <header class="site-header">
 <nav class="nav">
   <div class="brand">GreenSense</div>
@@ -22,12 +23,12 @@
 <main>
 <!-- HERO -->
 <section id="home" class="hero">
+  <div class="overlay"></div>
   <div class="hero-panel">
     <h1>Sensing the future — sustainably.</h1>
     <p class="lead">
       GreenSense turns everyday farm transactions into clear, actionable insights — reduce waste, increase profit, plan smarter.
-      GreenSense is a smart platform designed to help small greenhouse farmers turn everyday transactions into valuable insights. 
-      Every time a farmer buys seeds, fertilizers, or soil, or sells crops to a local market, restaurant, or subscription box, GreenSense collects and analyzes the information.
+      GreenSense is a smart platform designed to help small greenhouse farmers turn everyday transactions into valuable insights.
     </p>
     <div class="hero-actions">
       <a class="btn primary" href="#features">Explore Features</a>
