Add about section for GreenSense platform
Added detailed information about GreenSense, its benefits, and how it works.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <ul id="primary-nav" class="nav-list">
     <li><a href="#home">Home</a></li>
     <li><a href="#features">Features</a></li>
+    <li><a href="#about">About</a></li>
     <li><a href="#cta">Get Started</a></li>
   </ul>
 </nav>
@@ -70,6 +71,70 @@
     <div class="stat-card"><span class="stat-icon">🏡</span><h4>Best For</h4><p>Small Greenhouses</p></div>
   </div>
 </div>
+</section>
+
+<!-- ABOUT GREENSSENSE -->
+<section id="about" class="section about">
+  <div class="container">
+    <h2>What Is GreenSense?</h2>
+    <p>GreenSense is a smart platform designed to help small greenhouse farmers turn everyday transactions into valuable insights. Every time a farmer buys seeds, fertilizers, or soil, or sells crops to a local market, restaurant, or subscription box, GreenSense collects and analyzes the information.</p>
+    <p>But it’s not just about recording sales and expenses. GreenSense uses intelligent analysis to answer questions like:</p>
+    <ul>
+      <li>Which crops are making the most money?</li>
+      <li>Where am I spending too much?</li>
+      <li>How much should I plant next season?</li>
+      <li>Which customers or markets are the most profitable?</li>
+    </ul>
+    <p>GreenSense acts like a personal assistant for your farm—one that is awake 24/7, watching over your crops, your expenses, and your sales, and giving you easy-to-understand advice.</p>
+
+    <h3>Why Farmers Need GreenSense</h3>
+    <p>Small greenhouse farmers face common problems:</p>
+    <ul>
+      <li><strong>Financial Blind Spots:</strong> Many small farmers don’t know the real cost of producing each crop.</li>
+      <li><strong>Wasted Produce:</strong> Risk of overplanting without insights leads to unsold or spoiled crops.</li>
+      <li><strong>Cash Flow Challenges:</strong> Buyers and supplier fluctuations can cause uncertainty.</li>
+      <li><strong>Planning Difficulties:</strong> Hard to predict planting needs without data.</li>
+    </ul>
+    <p>GreenSense helps solve all of these problems by giving farmers the tools to make smart decisions, reduce waste, and grow profitably.</p>
+
+    <h3>How GreenSense Works</h3>
+    <ol>
+      <li><strong>Transaction Tracking:</strong> Log purchases and sales via mobile or computer.</li>
+      <li><strong>AI Insights:</strong> Analyze expenses, sales, and crop performance to calculate profit per crop, cost per plant, and seasonal trends.</li>
+      <li><strong>Alerts and Suggestions:</strong> Get notifications if a crop underperforms or becomes highly profitable.</li>
+      <li><strong>Easy-to-Understand Reports:</strong> Visual charts and summaries for clear, actionable advice.</li>
+    </ol>
+
+    <h3>Benefits of Using GreenSense</h3>
+    <ul>
+      <li>Save Money – Know exactly where your money is going and which crops give the highest return.</li>
+      <li>Reduce Waste – Avoid overplanting or unnecessary purchases.</li>
+      <li>Increase Profits – Make informed decisions about which crops to grow and which markets to target.</li>
+      <li>Plan Better – Predict demand and optimize planting schedules.</li>
+      <li>Peace of Mind – Let GreenSense watch over your transactions while you focus on farming.</li>
+    </ul>
+
+    <h3>Who Can Use GreenSense?</h3>
+    <p>Perfect for small-scale greenhouse farmers, indoor farms, vertical farms, and anyone selling directly to markets, restaurants, or subscription boxes.</p>
+
+    <h3>Why GreenSense is Different</h3>
+    <ul>
+      <li>Designed for small farms – Easy to use and affordable.</li>
+      <li>Actionable – Focuses on insights farmers can actually use, not just raw data.</li>
+      <li>Smart but simple – Uses AI to analyze trends without complex math or technology.</li>
+    </ul>
+
+    <h3>How Farmers Can Start</h3>
+    <ol>
+      <li>Sign up on the mobile app or website.</li>
+      <li>Start logging purchases and sales.</li>
+      <li>Let GreenSense analyze your data.</li>
+      <li>Receive alerts, reports, and advice to improve performance.</li>
+    </ol>
+
+    <h3>The Future with GreenSense</h3>
+    <p>GreenSense helps farmers grow healthier crops, reduce waste, increase profits, and make better decisions. Future plans include IoT integration, market trend forecasting, and personalized planting recommendations.</p>
+  </div>
 </section>
 
 <!-- CTA -->
