--- a/index.html
+++ b/index.html
@@ -81,21 +81,21 @@
 
       <!-- What Is GreenSense -->
       <div class="about-card">
-        <div class="about-icon">🌱</div>
+        <div class="about-icon-circle">🌱</div>
         <h3>What Is GreenSense?</h3>
         <p>GreenSense is a smart platform designed to help small greenhouse farmers turn everyday transactions into valuable insights. It analyzes purchases and sales to provide clear, actionable advice.</p>
       </div>
 
-      <!-- Purpose / Why Farmers Need GreenSense -->
+      <!-- Purpose -->
       <div class="about-card">
-        <div class="about-icon">💡</div>
+        <div class="about-icon-circle">💡</div>
         <h3>Purpose</h3>
         <p>Small greenhouse farmers face financial blind spots, wasted produce, cash flow challenges, and planning difficulties. GreenSense helps solve these by giving farmers tools to make smart decisions, reduce waste, and grow profitably.</p>
       </div>
 
       <!-- How It Works -->
       <div class="about-card">
-        <div class="about-icon">⚙️</div>
+        <div class="about-icon-circle">⚙️</div>
         <h3>How It Works</h3>
         <ol>
           <li><strong>Transaction Tracking:</strong> Log purchases and sales via mobile or computer.</li>
@@ -107,7 +107,7 @@
 
       <!-- Benefits -->
       <div class="about-card">
-        <div class="about-icon">✅</div>
+        <div class="about-icon-circle">✅</div>
         <h3>Benefits</h3>
         <ul>
           <li>Save Money – Know which crops give the highest return.</li>
@@ -120,14 +120,14 @@
 
       <!-- Who Can Use -->
       <div class="about-card">
-        <div class="about-icon">🏡</div>
+        <div class="about-icon-circle">🏡</div>
         <h3>Who Can Use It?</h3>
         <p>Perfect for small greenhouse farmers, indoor farms, vertical farms, and anyone selling directly to markets, restaurants, or subscription boxes.</p>
       </div>
 
       <!-- Future / Why It’s Different -->
       <div class="about-card">
-        <div class="about-icon">🚀</div>
+        <div class="about-icon-circle">🚀</div>
         <h3>Future & Differentiation</h3>
         <p>GreenSense is designed for small farms, actionable, and simple. Future plans include IoT integration, market forecasting, and personalized recommendations to help farmers grow smarter and more profitably.</p>
       </div>
